@@ -1,3 +1,9 @@
+Mon Dec 17 10:14:59 UTC 2012  Marcel Smit  <msmit@remedy.nl>
+
+        * tests/Bug_3769_Regression/Foo_exec.cpp:
+          Using ACE::is_inequal to compare floating point and
+          double values.
+
 Sun Dec 16 09:49:50 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/tests/Policies/dr_qos_test.cpp:
